--- a/src/styles/movie-item.css
+++ b/src/styles/movie-item.css
@@ -10,5 +10,14 @@
 }
 
 .movie-item-body {
-  padding: 0 10px;
+  padding: 0 10px 15px;
+}
+
+.movie-item-genre {
+  display: inline-block;
+  background-color: #6b6b6b;
+  color: white;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 5px;
 }
