Add navbar, and add styling to main page

--- a/src/styles/movie-list.css
+++ b/src/styles/movie-list.css
@@ -1,8 +1,11 @@
 .movie-list {
   width: 100%;
+  background-color: #333333;
 }
 
 .movie-list-body {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  padding: 5px;
 }
