Add 404 page, and loading spinner component

--- a/src/styles/movie.css
+++ b/src/styles/movie.css
@@ -87,3 +87,11 @@
   color: white;
   padding: 5px;
 }
+
+.loading {
+  background-color: #333;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
