--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -3,8 +3,9 @@
 .navbar {
   height: 90px;
   background-color: #333;
+  padding: 0 50px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid white;
 }
